# HouseElf

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/: settings.yml
.github/workflows/: ci.yml  docs.yml  python-build.yml
docs/: api.rst  conf.py  development.rst  index.rst  quickstart.rst
src/houseelf/: __init__.py  base_script.py
src/houseelf/scripts/: __init__.py  example_script.py
tests/: __init__.py  test_base_script.py  test_example_script.py
