[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "houseelf"
version = "0.1.0"
description = "Daily automation tasks that run periodically in Docker containers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["automation", "tasks", "docker", "periodic"]
authors = [
  { name = "The Winter Shadow" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.0",
  "mypy>=1.0.0",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Documentation = "https://github.com/TheWinterShadow/HouseElf#readme"
Issues = "https://github.com/TheWinterShadow/HouseElf/issues"
Source = "https://github.com/TheWinterShadow/HouseElf"

[tool.hatch.build.targets.wheel]
packages = ["src/houseelf"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=houseelf --cov-report=term-missing {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.envs.dev]
dependencies = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.0",
  "mypy>=1.0.0",
]

[tool.hatch.envs.dev.scripts]
isort = "python -m isort {args}"
black = "python -m black {args}"
flake8 = "python -m flake8 {args}"
mypy = "python -m mypy {args}"
check = [
  "isort src tests",
  "black --check src tests",
  "flake8 src tests",
  "mypy src",
]
fmt = [
  "isort src tests",
  "black src tests",
]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html"
serve = "python -m http.server -d docs/_build/html 8000"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = "docs/.*"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]

[tool.coverage.run]
source_pkgs = ["houseelf"]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
